[gd_scene load_steps=10 format=2]

[ext_resource path="res://plx-5.png" type="Texture" id=1]
[ext_resource path="res://Node2D.gd" type="Script" id=2]

[sub_resource type="Animation" id=4]
resource_name = "AtributosFadeIn"
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "AtributosFadeOut"
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextoInicial:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextoInicial:rect_size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 512, 244 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TextoInicial:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 264, 304 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "TextoFinal"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextoInicial:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.3, 2.6, 2.8, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 488 ), Vector2( 960, 457 ), Vector2( 904, 431 ), Vector2( 853, 407 ), Vector2( 808, 385 ), Vector2( 768, 366 ), Vector2( 731, 349 ), Vector2( 698, 333 ), Vector2( 668, 318 ), Vector2( 640, 305 ), Vector2( 614, 293 ), Vector2( 580, 276 ), Vector2( 549, 261 ), Vector2( 530, 252 ), Vector2( 512, 244 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextoInicial:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 304 ), Vector2( 0, 304 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "TextoFinalRetorno"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:rect_size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 512, 244 ), Vector2( 1024, 488 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("TextoInicial:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 2, 2 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("TextoInicial:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 304 ), Vector2( 0, 304 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "TextoInicialFadeIn"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "TextoInicialFadeOut"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("TextoInicial:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
script = ExtResource( 2 )

[node name="Background" type="Node2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 2055.0
margin_bottom = 599.0
color = Color( 0.227451, 0.494118, 0.411765, 1 )

[node name="Sprite" type="Sprite" parent="Background"]
position = Vector2( 514.5, 300.5 )
scale = Vector2( 2.67448, 2.80093 )
texture = ExtResource( 1 )

[node name="Sprite1" type="Sprite" parent="Background"]
position = Vector2( 1536, 299 )
scale = Vector2( 2.67448, 2.80093 )
texture = ExtResource( 1 )

[node name="TextoInicial" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = 264.0
margin_top = 304.0
margin_right = 776.0
margin_bottom = 548.0
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/AtributosFadeIn = SubResource( 4 )
anims/AtributosFadeOut = SubResource( 5 )
anims/RESET = SubResource( 1 )
anims/TextoFinal = SubResource( 6 )
anims/TextoFinalRetorno = SubResource( 7 )
anims/TextoInicialFadeIn = SubResource( 2 )
anims/TextoInicialFadeOut = SubResource( 3 )

[node name="BotaoForca" type="Button" parent="."]
margin_left = 96.0
margin_top = 464.0
margin_right = 232.0
margin_bottom = 528.0

[node name="TextoForca" type="Label" parent="BotaoForca"]
margin_right = 136.0
margin_bottom = 64.0
align = 1
valign = 1

[node name="BotaoInteligencia" type="Button" parent="."]
margin_left = 440.0
margin_top = 464.0
margin_right = 584.0
margin_bottom = 528.0

[node name="TextoInteligencia" type="Label" parent="BotaoInteligencia"]
margin_right = 144.0
margin_bottom = 64.0
align = 1
valign = 1

[node name="BotaoDestreza" type="Button" parent="."]
margin_left = 792.0
margin_top = 464.0
margin_right = 928.0
margin_bottom = 528.0

[node name="TextoDestreza" type="Label" parent="BotaoDestreza"]
margin_right = 136.0
margin_bottom = 64.0
align = 1
valign = 1

[node name="MostrarAtributos" type="Button" parent="."]
margin_left = 440.0
margin_top = 464.0
margin_right = 584.0
margin_bottom = 528.0
text = "Ver lista"

[node name="LineEdit" type="LineEdit" parent="."]
margin_left = 440.0
margin_top = 224.0
margin_right = 584.0
margin_bottom = 288.0
align = 1

[node name="TextoEdit" type="Label" parent="LineEdit"]
margin_right = 144.0
margin_bottom = 64.0
align = 1
valign = 1

[node name="MostrarNovosAtributos" type="Button" parent="."]
margin_left = 440.0
margin_top = 224.0
margin_right = 584.0
margin_bottom = 288.0

[node name="TextoNovosAtributos" type="Label" parent="MostrarNovosAtributos"]
margin_right = 144.0
margin_bottom = 64.0
align = 1
valign = 1

[node name="LineEditFinal" type="LineEdit" parent="."]
margin_left = 440.0
margin_top = 464.0
margin_right = 584.0
margin_bottom = 528.0
align = 1

[node name="TextoEditFinal" type="Label" parent="LineEditFinal"]
margin_right = 144.0
margin_bottom = 64.0
align = 1
valign = 1

[connection signal="pressed" from="BotaoForca" to="." method="_on_BotaoForca_pressed"]
[connection signal="pressed" from="BotaoInteligencia" to="." method="_on_BotaoInteligencia_pressed"]
[connection signal="pressed" from="BotaoDestreza" to="." method="_on_BotaoDestreza_pressed"]
[connection signal="pressed" from="MostrarAtributos" to="." method="_on_MostrarAtributos_pressed"]
[connection signal="focus_entered" from="LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="text_entered" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="MostrarNovosAtributos" to="." method="_on_MostrarNovosAtributos_pressed"]
[connection signal="focus_entered" from="LineEditFinal" to="." method="_on_LineEditFinal_focus_entered"]
[connection signal="text_changed" from="LineEditFinal" to="." method="_on_LineEditFinal_text_changed"]
[connection signal="text_entered" from="LineEditFinal" to="." method="_on_LineEditFinal_text_entered"]
